--- a/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
+++ b/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Serial_LEDStrip_Communication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Serial_LEDStrip_Communication.Properties.Settings>
+            <setting name="numStripes" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="maxLEDCount" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="lastCom" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledBrightness" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </Serial_LEDStrip_Communication.Properties.Settings>
+    </userSettings>
 </configuration>
