- Abschluss der neuen Gestaltung - Funktionalität von Grund auf neu realisiert - Wiederherstellen der Verbindung (wenn möglich) auch nach Neustart des Programms - Speichern der letzten Verbindung (COM Port)

--- a/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
+++ b/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <Serial_LEDStrip_Communication.Properties.Settings>
             <setting name="numStripes" serializeAs="String">
-                <value>1</value>
+                <value>4</value>
             </setting>
             <setting name="maxLEDCount" serializeAs="String">
                 <value>0</value>
@@ -20,7 +20,46 @@
                 <value />
             </setting>
             <setting name="ledBrightness" serializeAs="String">
-                <value>0</value>
+                <value>75</value>
+            </setting>
+            <setting name="COMsaved" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ledColor01" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor02" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor03" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor04" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor05" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor06" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor07" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor08" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor09" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor11" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ledColor12" serializeAs="String">
+                <value />
             </setting>
         </Serial_LEDStrip_Communication.Properties.Settings>
     </userSettings>
