- Hinzufügen eines Autostart Helfers - Verhindern von zwei gleichzeitigen Instanzen des Programms - Minimieren der Anwendung in den Systemtray - Starten der Anwendung mit Windows (Autostart) - Ändern der Einstellungen je nach Benutzerrolle (Admin, User) - Laden der Farbeinstellungen beim Programmstart - Speichern der Farben in den System Properties - Möglichkeit alle Stripes gleichzeitig zu beschreiben

--- a/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/Properties/Settings.settings
+++ b/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/Properties/Settings.settings
@@ -5,8 +5,8 @@
     <Setting Name="numStripes" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">4</Value>
     </Setting>
-    <Setting Name="maxLEDCount" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="loadOnBoot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="lastCom" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -18,40 +18,40 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ledColor01" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor02" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor03" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor04" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor05" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor06" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor07" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor08" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor09" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor10" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor11" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
     <Setting Name="ledColor12" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">255255255</Value>
     </Setting>
   </Settings>
 </SettingsFile>
