--- a/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
+++ b/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/App.config
@@ -13,8 +13,8 @@
             <setting name="numStripes" serializeAs="String">
                 <value>4</value>
             </setting>
-            <setting name="maxLEDCount" serializeAs="String">
-                <value>0</value>
+            <setting name="loadOnBoot" serializeAs="String">
+                <value>False</value>
             </setting>
             <setting name="lastCom" serializeAs="String">
                 <value />
@@ -26,40 +26,40 @@
                 <value>False</value>
             </setting>
             <setting name="ledColor01" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor02" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor03" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor04" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor05" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor06" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor07" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor08" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor09" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor10" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor11" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
             <setting name="ledColor12" serializeAs="String">
-                <value />
+                <value>255255255</value>
             </setting>
         </Serial_LEDStrip_Communication.Properties.Settings>
     </userSettings>
